--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>AirbnV</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://kit.fontawesome.com/f6dfe41445.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/f6dfe41445.js" crossorigin="anonymous" defer></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
